ALC4 | Yohane | Design and implement ui for the insert activity

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
   <dimen name="fab_margin">16dp</dimen>
+  <dimen name="text_margin_starndard">16dp</dimen>
+  <dimen name="text_margin_large">24dp</dimen>
 </resources>
