--- a/app/src/main/res/layout/content_insert.xml
+++ b/app/src/main/res/layout/content_insert.xml
@@ -9,13 +9,47 @@
     tools:context=".InsertActivity"
     tools:showIn="@layout/activity_insert">
 
-  <TextView
-      android:layout_width="wrap_content"
+  <EditText
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
+      android:id="@+id/txtTitle"
+      android:hint="@string/title_hint"
+      android:layout_marginStart="@dimen/text_margin_starndard"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginLeft="@dimen/text_margin_starndard"
+      android:layout_marginEnd="@dimen/text_margin_starndard"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginRight="@dimen/text_margin_starndard"
+      android:layout_marginTop="@dimen/text_margin_large"
       app:layout_constraintTop_toTopOf="parent"/>
+
+  <EditText
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="numberDecimal"
+      android:hint="@string/price_hint"
+      android:id="@+id/txtPrice"
+      android:layout_marginStart="@dimen/text_margin_starndard"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginLeft="@dimen/text_margin_starndard"
+      android:layout_marginEnd="@dimen/text_margin_starndard"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginRight="@dimen/text_margin_starndard"
+      android:layout_marginTop="@dimen/text_margin_starndard"
+      app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>
+
+  <EditText
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:hint="@string/description_hint"
+      android:id="@+id/txtDescription"
+      android:layout_marginStart="@dimen/text_margin_starndard"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginLeft="@dimen/text_margin_starndard"
+      android:layout_marginTop="@dimen/text_margin_starndard"
+      app:layout_constraintTop_toBottomOf="@+id/txtPrice"
+      android:layout_marginEnd="@dimen/text_margin_starndard"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginRight="@dimen/text_margin_starndard"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
