ALC4 | Yohane | Implement auth

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,11 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DealActivity">
+    tools:context=".ListActivity">
 
   <com.google.android.material.appbar.AppBarLayout
-      android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_width="match_parent"
       android:theme="@style/AppTheme.AppBarOverlay">
 
     <androidx.appcompat.widget.Toolbar
@@ -21,6 +21,6 @@
 
   </com.google.android.material.appbar.AppBarLayout>
 
-  <include layout="@layout/content_insert"/>
+  <include layout="@layout/content_list"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
