--- a/app/src/main/res/menu/list_activity_menu.xml
+++ b/app/src/main/res/menu/list_activity_menu.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-
   <item
-      android:id="@+id/save_menu"
-      android:title="@string/save_menu"
-      app:showAsAction="always"/>
-
-
-  <item
-      android:id="@+id/delete_menu"
-      android:title="@string/delete_deal"
+      android:id="@+id/insert_menu"
+      android:title="New Travel Deal"
       app:showAsAction="never"/>
 
+  <item
+      android:id="@+id/logout_menu"
+      android:title="Logout"
+      app:showAsAction="never"/>
 </menu>
