--- a/app/src/main/res/layout/activity_deal.xml
+++ b/app/src/main/res/layout/activity_deal.xml
@@ -21,6 +21,6 @@
 
   </com.google.android.material.appbar.AppBarLayout>
 
-  <include layout="@layout/content_insert"/>
+  <include layout="@layout/content_deal"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
