--- a/app/src/main/res/layout/content_deal.xml
+++ b/app/src/main/res/layout/content_deal.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".DealActivity"
-    tools:showIn="@layout/activity_insert">
+    tools:showIn="@layout/activity_deal">
 
   <EditText
       android:layout_width="match_parent"
@@ -51,5 +51,29 @@
       android:layout_marginEnd="@dimen/text_margin_starndard"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginRight="@dimen/text_margin_starndard"/>
+
+  <Button
+      android:text="Upload Image"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/btnImage"
+      android:layout_marginTop="@dimen/text_margin_starndard"
+      app:layout_constraintTop_toBottomOf="@+id/txtDescription"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginLeft="@dimen/text_margin_starndard"
+      android:layout_marginStart="@dimen/text_margin_starndard"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginEnd="@dimen/text_margin_starndard"
+      android:layout_marginRight="@dimen/text_margin_starndard"/>
+
+  <ImageView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:srcCompat="@android:color/transparent"
+      android:id="@+id/image"
+      app:layout_constraintTop_toBottomOf="@+id/btnImage"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_margin="@dimen/text_margin_starndard"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
